--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -51,6 +51,8 @@ $menu = wofi --show drun
 exec-once = waybar
 exec-once = ~/.config/hypr/wallpaper.sh
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
+exec-once = swaync
 #exec-once = gBar bar 0
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -65,7 +67,6 @@ env = HYPRCURSOR_SIZE,18
 #####################
 ### LOOK AND FEEL ###
 #####################
-
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
@@ -93,11 +94,14 @@ decoration {
         enabled = true
         size = 8
         passes = 3
-        new_optimizations = on
+        new_optimizations = yes
         ignore_opacity = true
         xray = true
         popups = true
-        #blurls = waybar
+        blurls = waybar
+        blurls = wofi
+        blurls = swaync-control-center
+        blurls = swaync-notification-window
     }
 
     shadow {
@@ -249,7 +253,8 @@ bindm = $mainMod, mouse:272, movewindow
 bind = ALT, TAB, exec, wlogout
 #bind = CTRL, ESCAPE, exec, gksu
 bind = ALT, w, exec, ~/.config/hypr/wallpaper.sh
-bind = ALT, a, exec, ~/.config/waybar/scripts/refresh.sh 
+bind = ALT, a, exec, ~/.config/waybar/refresh.sh 
+bind = ALT, r, exec, ~/.config/swaync/refresh.sh
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
@@ -260,8 +265,26 @@ bind = ALT, a, exec, ~/.config/waybar/scripts/refresh.sh
 bind = $mainMod, M, exit,
 # Example windowrule v1
 #windowrule = float, ^(kitty)$
-
+#layerrule = blur, waybar
+#layerrule = blur, wofi
 # Example windowrule v2
-#windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
+
+
+layerrule = blur, wofi
+layerrule = ignorezero, wofi
+layerrule = ignorealpha 0.5, wofi
+
+layerrule = blur, waybar
+layerrule = ignorezero, waybar
+layerrule = ignorealpha 0.5, waybar
+
+#Swaync
+layerrule = blur, swaync-control-center
+layerrule = blur, swaync-notification-window
+layerrule = ignorezero, swaync-control-center
+layerrule = ignorezero, swaync-notification-window
+layerrule = ignorealpha 0.5, swaync-control-center
+layerrule = ignorealpha 0.5, swaync-notification-window
+#windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
