Some clean touches and edits

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -50,7 +50,7 @@ $menu = wofi --show drun
 # exec-once = nm-applet &
 exec-once = hypridle
 exec-once = waybar
-exec-once = hyprpaper
+exec-once = swww-daemon
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 exec-once = swaync
@@ -237,7 +237,8 @@ bind = ALT, up, movewindow, u
 bind = ALT, down, movewindow, d 
 bind = CTRL, Print, exec, hyprshot -m region -o ~/Screenshots/
 bind = , Print, exec, hyprshot -m window -o ~/Screenshots/
-bind = CTRL, l, exec, hyprlock
+bind = ALT, Print, exec, hyprshot -m active -m output -o ~/Screenshots/
+bind = $mainMod, l, exec, hyprlock
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
@@ -248,7 +249,6 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
 # Sound config
 #bind = $mainMod, F8, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle && gBar audio
 #bind = $mainMod, F9, exec, gBar audio && pactl set-sink-volume @DEFAULT_SINK@ -5%
