--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -2,7 +2,7 @@ source = /home/eli/.cache/wal/colors-hyprland
 
 background {
     monitor =
-    path = /home/eli/wallpapers/walls/wp9052004-3369484529.jpg
+    path = $wallpaper
     blur_size = 7
     blur_passes = 2
     brightness = .4
