--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,30 +1,30 @@
-foreground         #bfc4cb
-background         #021430
+foreground         #c2c2c2
+background         #0d0d0d
 background_opacity 1.0
-cursor             #bfc4cb
+cursor             #c2c2c2
 
-active_tab_foreground     #021430
-active_tab_background     #bfc4cb
-inactive_tab_foreground   #bfc4cb
-inactive_tab_background   #021430
+active_tab_foreground     #0d0d0d
+active_tab_background     #c2c2c2
+inactive_tab_foreground   #c2c2c2
+inactive_tab_background   #0d0d0d
 
-active_border_color   #bfc4cb
-inactive_border_color #021430
-bell_border_color     #F69471
+active_border_color   #c2c2c2
+inactive_border_color #0d0d0d
+bell_border_color     #942436
 
-color0       #021430
-color8       #5e6673
-color1       #F69471
-color9       #F69471
-color2       #275A9C
-color10      #275A9C
-color3       #5C6794
-color11      #5C6794
-color4       #2F75C8
-color12      #2F75C8
-color5       #94728E
-color13      #94728E
-color6       #6083BB
-color14      #6083BB
-color7       #bfc4cb
-color15      #bfc4cb
+color0       #0d0d0d
+color8       #6a5757
+color1       #942436
+color9       #C63049
+color2       #5b5e60
+color10      #7A7E81
+color3       #965b63
+color11      #C87A85
+color4       #5e6163
+color12      #7E8285
+color5       #696c6f
+color13      #8D9195
+color6       #747779
+color14      #9B9FA2
+color7       #978c8c
+color15      #c2c2c2
