--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,3 +1,6 @@
+# Source the colors-hyprland file to load environment variables
+source /home/eli/.cache/wal/colors-hyprland
+
 general {
     lock_cmd = pidof hyprlock || hyprlock
     ignore_dbus_inhibit = /opt/spotify/spotify
@@ -5,18 +8,18 @@ general {
 
 listener {
     timeout = 270
-    on-timeout = notify-send "System" "You are about to be locked out!" -i ~/wallpapers/hyprland-notify.jpg
+    on-timeout = source /home/eli/.cache/wal/colors.sh && notify-send "System" "You are about to be locked out!" -i $wallpaper
 }
 
 listener {
     timeout = 300
     on-timeout = loginctl lock-session
-    on-resume = sleep 2 && notify-send "System" "Unlocked! Hey $USER" -i ~/wallpapers/hyprland-notify.jpg
-
+    on-resume = sleep 2 && source /home/eli/.cache/wal/colors.sh && notify-send "System" "Unlocked! Hey $USER" -i $wallpaper
 }
 
 listener {
     timeout = 1200
     on-timeout = hyprctl dispatch dpms off
-    on-resume = hyprctl dispatch dpms on          
+    on-resume = hyprctl dispatch dpms on
 }
+
