--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,5 +1,5 @@
 # Source the colors-hyprland file to load environment variables
-source /home/eli/.cache/wal/colors-hyprland
+source /home/$USER/.cache/wal/colors-hyprland
 
 general {
     lock_cmd = pidof hyprlock || hyprlock
