Uptaded Colors, Wofi animation, Volume and brightness control for swaync, and some new wallpapers.

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -14,14 +14,14 @@ input-field {
     dots_rounding = 4
     dots_spacing = .5
     dots_fase_time = 300
-    inner_color = rgba(100,100,100,.5) # no fill
-    outer_color = rgb(30,30,30,1)
-    check_color= rgba(30,30,30,1)
-    fail_color= rgba(30,30,30,1)
+    inner_color = $backgroundCol # no fill
+    outer_color = $backgroundCol $backgroundCol
+    check_color= $backgroundCol $backgroundCol
+    fail_color= $backgroundCol $backgroundCol
     font_color = $color9
     font_family = CodeNewRoman Nerd Font Propo
     fade_on_empty = false
-    shadow_color = rgba(20,20,20,.5)
+    shadow_color = rgba(0,0,0,0.5)
     shadow_passes = 1
     shadow_size = 5
     rounding = 20
