--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,30 +1,30 @@
-foreground         #c2c2c2
-background         #0d0d0d
+foreground         #c0c1c2
+background         #06090C
 background_opacity 1.0
-cursor             #c2c2c2
+cursor             #c0c1c2
 
-active_tab_foreground     #0d0d0d
-active_tab_background     #c2c2c2
-inactive_tab_foreground   #c2c2c2
-inactive_tab_background   #0d0d0d
+active_tab_foreground     #06090C
+active_tab_background     #c0c1c2
+inactive_tab_foreground   #c0c1c2
+inactive_tab_background   #06090C
 
-active_border_color   #c2c2c2
-inactive_border_color #0d0d0d
-bell_border_color     #942436
+active_border_color   #c0c1c2
+inactive_border_color #06090C
+bell_border_color     #2a3e4b
 
-color0       #0d0d0d
-color8       #6a5757
-color1       #942436
-color9       #C63049
-color2       #5b5e60
-color10      #7A7E81
-color3       #965b63
-color11      #C87A85
-color4       #5e6163
-color12      #7E8285
-color5       #696c6f
-color13      #8D9195
-color6       #747779
-color14      #9B9FA2
-color7       #978c8c
-color15      #c2c2c2
+color0       #06090C
+color8       #555f68
+color1       #2a3e4b
+color9       #385365
+color2       #393b3f
+color10      #4D4F54
+color3       #484c4e
+color11      #606668
+color4       #6f5143
+color12      #946C5A
+color5       #68655a
+color13      #8B8778
+color6       #596765
+color14      #778A87
+color7       #899195
+color15      #c0c1c2
