--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -30,9 +30,7 @@
             "tooltip-format": "<tt>{calendar}</tt>",
             "calendar": {
                 "format": {
-                    "months": "<span color='#000000'><b>{}</b></span>",
-                    "weekdays": "<span color='#000000'><b>{}</b></span>",
-                    "today": "<span color='#000000'><b>{}</b></span>"
+                    "today": "<span color='#fAfBfC'><b>{}</b></span>"
                 }
             },
             "actions": {
