--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,7 +12,7 @@ monitor = DP-1, 2560x1440@165, 0x0, 1
 ###################
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $terminal = kitty
-$fileManager = GTK_THEME=Adwaita:dark thunar
+$fileManager = thunar
 $menu = wofi --show drun
 #################
 ### AUTOSTART ###
@@ -21,7 +21,7 @@ exec-once = hypridle
 exec-once = waybar
 exec-once = swww-daemon
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = swaync
+exec-once = swaync && swaync-client -df
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
