--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -173,7 +173,7 @@ bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-bind = ALT, TAB, exec, wlogout
+bind = ALT, TAB, exec, wlogout -b 2
 #bind = CTRL, ESCAPE, exec, gksu
 bind = ALT, w, exec, ~/.config/hypr/wallpaper.sh
 bind = ALT, a, exec, ~/.config/waybar/refresh.sh 
@@ -187,6 +187,9 @@ bind = $mainMod, M, exit,
 layerrule = blur, wofi
 layerrule = ignorezero, wofi
 layerrule = ignorealpha 0.5, wofi
+layerrule = blur, wlogout
+layerrule = ignorezero, wlogout
+layerrule = ignorealpha 0.5, wlogout
 layerrule = blur, waybar
 layerrule = ignorezero, waybar
 layerrule = ignorealpha 0.5, waybar
@@ -196,4 +199,10 @@ layerrule = ignorezero, swaync-control-center
 layerrule = ignorezero, swaync-notification-window
 layerrule = ignorealpha 0.5, swaync-control-center
 layerrule = ignorealpha 0.5, swaync-notification-window
+
+
+
+layerrule = blur, wlogout
+layerrule = ignorezero, wlogout
+layerrule = ignorealpha 0.5, wlogout
 #windowrulev2 = suppressevent maximize, class:.*
