--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,30 +1,30 @@
-foreground         #c0c1c2
-background         #06090C
+foreground         #c2c1c1
+background         #0E0A09
 background_opacity 1.0
-cursor             #c0c1c2
+cursor             #c2c1c1
 
-active_tab_foreground     #06090C
-active_tab_background     #c0c1c2
-inactive_tab_foreground   #c0c1c2
-inactive_tab_background   #06090C
+active_tab_foreground     #0E0A09
+active_tab_background     #c2c1c1
+inactive_tab_foreground   #c2c1c1
+inactive_tab_background   #0E0A09
 
-active_border_color   #c0c1c2
-inactive_border_color #06090C
-bell_border_color     #2a3e4b
+active_border_color   #c2c1c1
+inactive_border_color #0E0A09
+bell_border_color     #754843
 
-color0       #06090C
-color8       #555f68
-color1       #2a3e4b
-color9       #385365
-color2       #393b3f
-color10      #4D4F54
-color3       #484c4e
-color11      #606668
-color4       #6f5143
-color12      #946C5A
-color5       #68655a
-color13      #8B8778
-color6       #596765
-color14      #778A87
-color7       #899195
-color15      #c0c1c2
+color0       #0E0A09
+color8       #6a5656
+color1       #754843
+color9       #9C605A
+color2       #9f5448
+color10      #D57060
+color3       #b17251
+color11      #ED996D
+color4       #ae8a57
+color12      #E8B975
+color5       #6a5c62
+color13      #8E7B83
+color6       #a78e77
+color14      #DFBE9F
+color7       #968b8b
+color15      #c2c1c1
