--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,30 +1,30 @@
-foreground         #c2c1c1
-background         #0E0A09
+foreground         #bfc3c6
+background         #01111C
 background_opacity 1.0
-cursor             #c2c1c1
+cursor             #bfc3c6
 
-active_tab_foreground     #0E0A09
-active_tab_background     #c2c1c1
-inactive_tab_foreground   #c2c1c1
-inactive_tab_background   #0E0A09
+active_tab_foreground     #01111C
+active_tab_background     #bfc3c6
+inactive_tab_foreground   #bfc3c6
+inactive_tab_background   #01111C
 
-active_border_color   #c2c1c1
-inactive_border_color #0E0A09
-bell_border_color     #754843
+active_border_color   #bfc3c6
+inactive_border_color #01111C
+bell_border_color     #39435e
 
-color0       #0E0A09
-color8       #6a5656
-color1       #754843
-color9       #9C605A
-color2       #9f5448
-color10      #D57060
-color3       #b17251
-color11      #ED996D
-color4       #ae8a57
-color12      #E8B975
-color5       #6a5c62
-color13      #8E7B83
-color6       #a78e77
-color14      #DFBE9F
-color7       #968b8b
-color15      #c2c1c1
+color0       #01111C
+color8       #58646b
+color1       #39435e
+color9       #4C5A7E
+color2       #01506f
+color10      #026B94
+color3       #0b4a72
+color11      #0F6399
+color4       #335090
+color12      #446BC0
+color5       #036885
+color13      #048BB2
+color6       #206b87
+color14      #2B8FB4
+color7       #8c9297
+color15      #bfc3c6
