--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,6 +20,7 @@ $menu = wofi --show drun
 exec-once = hypridle
 exec-once = waybar
 exec-once = swww-daemon
+exec-once = sudo powertop --auto-tune
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = swaync && swaync-client -df
 #############################
@@ -86,8 +87,8 @@ dwindle {
     preserve_split = true
 }
 misc { 
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 #############
 ### INPUT ###
