--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2644,7 +2644,7 @@ include current-theme.conf
 #: }}}
 
 # BEGIN_KITTY_FONTS
-font_family      family='CodeNewRoman Nerd Font Mono' postscript_name=CodeNewRomanNFM
+font_family      family="Hurmit Nerd Font"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
