New Wallpaper Selection! Other Tweaks as well

--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,30 +1,30 @@
-foreground         #bfc3c6
-background         #01111C
+foreground         #c6c6c3
+background         #1b1b12
 background_opacity 1.0
-cursor             #bfc3c6
+cursor             #c6c6c3
 
-active_tab_foreground     #01111C
-active_tab_background     #bfc3c6
-inactive_tab_foreground   #bfc3c6
-inactive_tab_background   #01111C
+active_tab_foreground     #1b1b12
+active_tab_background     #c6c6c3
+inactive_tab_foreground   #c6c6c3
+inactive_tab_background   #1b1b12
 
-active_border_color   #bfc3c6
-inactive_border_color #01111C
-bell_border_color     #39435e
+active_border_color   #c6c6c3
+inactive_border_color #1b1b12
+bell_border_color     #393c37
 
-color0       #01111C
-color8       #58646b
-color1       #39435e
-color9       #4C5A7E
-color2       #01506f
-color10      #026B94
-color3       #0b4a72
-color11      #0F6399
-color4       #335090
-color12      #446BC0
-color5       #036885
-color13      #048BB2
-color6       #206b87
-color14      #2B8FB4
-color7       #8c9297
-color15      #bfc3c6
+color0       #1b1b12
+color8       #71715c
+color1       #393c37
+color9       #4D514A
+color2       #4b4d3f
+color10      #656755
+color3       #69562a
+color11      #8D7338
+color4       #6a5838
+color12      #8E764B
+color5       #7d6c3c
+color13      #A79050
+color6       #967d3c
+color14      #C8A751
+color7       #9b9b90
+color15      #c6c6c3
