--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,143 +1,101 @@
-# You can split this configuration into multiple files
-# Create your files separately and then link them to this file like this:
-# source = ~/.config/hypr/myColors.conf
 source = /home/$USER/.cache/wal/colors-hyprland
-################
-### MONITORS ###
-################
-# See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = DP-1, 2560x1440@165, 0x0, 1
-###################
-### MY PROGRAMS ###
-###################
-# See https://wiki.hyprland.org/Configuring/Keywords/
 $terminal = kitty
 $fileManager = thunar
-$menu = wofi --show drun
-#################
-### AUTOSTART ###
-#################
+$menu = wofi --show drun -n
 exec-once = hypridle
 exec-once = waybar
 exec-once = swww-daemon
 exec-once = sudo powertop --auto-tune
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = swaync && swaync-client -df
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
 env = XCURSOR_THEME,Bibata-Modern-Classic
 env = XCURSOR_SIZE,12
-#####################
-### LOOK AND FEEL ###
-#####################
-# Refer to https://wiki.hyprland.org/Configuring/Variables/
-# https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
     gaps_in = 2
-    gaps_out = 15
-    border_size = 0
-    col.active_border = $color9
-    col.inactive_border = rgba(00000000)
-    resize_on_border = true
-    allow_tearing = false
-    layout = dwindle
+        gaps_out = 15
+        border_size = 0
+        col.active_border = $color9
+        col.inactive_border = rgba(00000000)
+        resize_on_border = true
+        allow_tearing = false
+        layout = dwindle
 }
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 4
-    active_opacity = 0.8
-    inactive_opacity = 0.7
-    fullscreen_opacity = 1
-    blur {
-        enabled = true
-        size = 3
-        passes = 5
-        new_optimizations = true
-        ignore_opacity = true
-        xray = false
-        popups = true
-        blurls = waybar
-        blurls = wofi
-        blurls = swaync-control-center
-        blurls = swaync-notification-window
-    }
+        active_opacity = 0.8
+        inactive_opacity = 0.7
+        fullscreen_opacity = 1
+        blur {
+            enabled = true
+                size = 3
+                passes = 5
+                new_optimizations = true
+                ignore_opacity = true
+                xray = false
+                popups = true
+                blurls = waybar
+                blurls = wofi
+                blurls = swaync-control-center
+                blurls = swaync-notification-window
+        }
     shadow {
         enabled = false
-        range = 10
-        render_power = 5
-        color = $color0
-        ignore_window = true
+            range = 10
+            render_power = 5
+            color = $color0
+            ignore_window = true
     }
 }
 animations {
     enabled = true
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-    bezier = linear, 0,0,1,1
-    bezier = swirl, 0.04, 1, 0.2, 1.2
-    animation = windows, 1, 4, swirl, popin 0%
-    animation = windowsOut, 1, 3, linear, popin 0%
-    animation = fade, 1, 2, linear
-    animation = workspaces, 1, 2, linear
-    animation = specialWorkspace, 1, 5, swirl, slidefadevert -50%
+        bezier = linear, 0,0,1,1
+        bezier = swirl, 0.04, 1, 0.2, 1.2
+        animation = windows, 1, 4, swirl, popin 0%
+        animation = windowsOut, 1, 3, linear, popin 0%
+        animation = fade, 1, 2, linear
+        animation = workspaces, 1, 2, linear
+        animation = specialWorkspace, 1, 5, swirl, slidefadevert -50%
 }
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. mainMod + P
-    preserve_split = true
+        preserve_split = true
 }
 misc { 
-    force_default_wallpaper = 1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 1 
+        disable_hyprland_logo = true 
 }
-#############
-### INPUT ###
-#############
-# https://wiki.hyprland.org/Configuring/Variables/#input
+
 input {
     kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
-    follow_mouse = 1
-    sensitivity = 0
-    touchpad {
-        natural_scroll = true
-    }
+        follow_mouse = 1
+        sensitivity = 0
+        touchpad {
+            natural_scroll = true
+        }
 }
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     workspace_swipe = true
-    workspace_swipe_distance = 300
-    workspace_swipe_cancel_ratio = .05
-    workspace_swipe_min_speed_to_force = 0
+        workspace_swipe_distance = 300
+        workspace_swipe_cancel_ratio = .05
+        workspace_swipe_min_speed_to_force = 0
 }
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
     name = epic-mouse-v1
-    sensitivity = 0
+        sensitivity = 0
 }
-####################
-### KEYBINDINGSS ###
-####################
-# See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, B, killactive,
+bind = $mainMod, B, killactive
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating
 bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo,
-bind = $mainMod, J, togglesplit,
+bind = $mainMod, P, pseudo
+bind = $mainMod, J, togglesplit
 bind = $mainMod, F, fullscreen
-# Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
-# Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -148,7 +106,6 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -179,18 +136,10 @@ bind = ALT, TAB, exec, wlogout -b 2
 bind = ALT, w, exec, ~/.config/hypr/wallpaper.sh
 bind = ALT, a, exec, ~/.config/waybar/refresh.sh 
 bind = ALT, r, exec, ~/.config/swaync/refresh.sh
-bind = $mainMod, M, exit,
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
+bind = $mainMod, M, exit
 layerrule = blur, wofi
 layerrule = ignorezero, wofi
 layerrule = ignorealpha 0.5, wofi
-layerrule = blur, wlogout
-layerrule = ignorezero, wlogout
-layerrule = ignorealpha 0.5, wlogout
 layerrule = blur, waybar
 layerrule = ignorezero, waybar
 layerrule = ignorealpha 0.5, waybar
@@ -200,10 +149,5 @@ layerrule = ignorezero, swaync-control-center
 layerrule = ignorezero, swaync-notification-window
 layerrule = ignorealpha 0.5, swaync-control-center
 layerrule = ignorealpha 0.5, swaync-notification-window
-
-
-
-layerrule = blur, wlogout
-layerrule = ignorezero, wlogout
-layerrule = ignorealpha 0.5, wlogout
+windowrule = rounding 10, wofi
 #windowrulev2 = suppressevent maximize, class:.*
