Updated wlogout and hyprland.conf

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,17 +14,17 @@ env = XCURSOR_SIZE,12
 general { 
     gaps_in = 2
         gaps_out = 15
-        border_size = 0
+        border_size = 1
         col.active_border = $color9
-        col.inactive_border = rgba(00000000)
+        col.inactive_border = $color5
         resize_on_border = true
         allow_tearing = false
         layout = dwindle
 }
 decoration {
-    rounding = 4
+    rounding = 10
         active_opacity = 0.8
-        inactive_opacity = 0.7
+        inactive_opacity = 0.5
         fullscreen_opacity = 1
         blur {
             enabled = true
@@ -34,17 +34,12 @@ decoration {
                 ignore_opacity = true
                 xray = false
                 popups = true
-                blurls = waybar
-                blurls = wofi
-                blurls = swaync-control-center
-                blurls = swaync-notification-window
         }
     shadow {
-        enabled = false
-            range = 10
-            render_power = 5
+        enabled = true
+            range = 15
+            render_power = 3
             color = $color0
-            ignore_window = true
     }
 }
 animations {
@@ -137,9 +132,7 @@ bind = ALT, w, exec, ~/.config/hypr/wallpaper.sh
 bind = ALT, a, exec, ~/.config/waybar/refresh.sh 
 bind = ALT, r, exec, ~/.config/swaync/refresh.sh
 bind = $mainMod, M, exit
-layerrule = blur, wofi
-layerrule = ignorezero, wofi
-layerrule = ignorealpha 0.5, wofi
+
 layerrule = blur, waybar
 layerrule = ignorezero, waybar
 layerrule = ignorealpha 0.5, waybar
@@ -149,5 +142,4 @@ layerrule = ignorezero, swaync-control-center
 layerrule = ignorezero, swaync-notification-window
 layerrule = ignorealpha 0.5, swaync-control-center
 layerrule = ignorealpha 0.5, swaync-notification-window
-windowrule = rounding 10, wofi
 #windowrulev2 = suppressevent maximize, class:.*
