--- a/.config/cava/config
+++ b/.config/cava/config
@@ -1,6 +1,6 @@
 [color]
 gradient = 1
 gradient_count = 2
-gradient_color_1 = '#4b4d3f'
-gradient_color_2 = '#69562a'
+gradient_color_1 = '#393b3b'
+gradient_color_2 = '#484b48'
 
