--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,30 +1,30 @@
-foreground         #c6c6c3
-background         #1b1b12
+foreground         #c3c5c6
+background         #121a1b
 background_opacity 1.0
-cursor             #c6c6c3
+cursor             #c3c5c6
 
-active_tab_foreground     #1b1b12
-active_tab_background     #c6c6c3
-inactive_tab_foreground   #c6c6c3
-inactive_tab_background   #1b1b12
+active_tab_foreground     #121a1b
+active_tab_background     #c3c5c6
+inactive_tab_foreground   #c3c5c6
+inactive_tab_background   #121a1b
 
-active_border_color   #c6c6c3
-inactive_border_color #1b1b12
-bell_border_color     #393c37
+active_border_color   #c3c5c6
+inactive_border_color #121a1b
+bell_border_color     #2d4b34
 
-color0       #1b1b12
-color8       #71715c
-color1       #393c37
-color9       #4D514A
-color2       #4b4d3f
-color10      #656755
-color3       #69562a
-color11      #8D7338
-color4       #6a5838
-color12      #8E764B
-color5       #7d6c3c
-color13      #A79050
-color6       #967d3c
-color14      #C8A751
-color7       #9b9b90
-color15      #c6c6c3
+color0       #121a1b
+color8       #5c7171
+color1       #2d4b34
+color9       #3D6446
+color2       #393b3b
+color10      #4C4F4F
+color3       #484b48
+color11      #616561
+color4       #69514c
+color12      #8C6D66
+color5       #53674d
+color13      #6F8A67
+color6       #66695a
+color14      #888D78
+color7       #90989b
+color15      #c3c5c6
