Some more updates including Starship!

--- a/.config/cava/config
+++ b/.config/cava/config
@@ -1,6 +1,6 @@
 [color]
 gradient = 1
 gradient_count = 2
-gradient_color_1 = '#393b3b'
-gradient_color_2 = '#484b48'
+gradient_color_1 = '#4f3a2a'
+gradient_color_2 = '#2f3030'
 
