--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -14,7 +14,7 @@ input-field {
     dots_rounding = 4
     dots_spacing = .5
     dots_fase_time = 300
-    inner_color = $backgroundCol # no fill
+    inner_color = $backgroundCol
     outer_color = $backgroundCol $backgroundCol
     check_color= $backgroundCol $backgroundCol
     fail_color= $backgroundCol $backgroundCol
