--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,30 +1,30 @@
-foreground         #c3c5c6
-background         #121a1b
+foreground         #c1c1c0
+background         #070705
 background_opacity 1.0
-cursor             #c3c5c6
+cursor             #c1c1c0
 
-active_tab_foreground     #121a1b
-active_tab_background     #c3c5c6
-inactive_tab_foreground   #c3c5c6
-inactive_tab_background   #121a1b
+active_tab_foreground     #070705
+active_tab_background     #c1c1c0
+inactive_tab_foreground   #c1c1c0
+inactive_tab_background   #070705
 
-active_border_color   #c3c5c6
-inactive_border_color #121a1b
-bell_border_color     #2d4b34
+active_border_color   #c1c1c0
+inactive_border_color #070705
+bell_border_color     #36362a
 
-color0       #121a1b
-color8       #5c7171
-color1       #2d4b34
-color9       #3D6446
-color2       #393b3b
-color10      #4C4F4F
-color3       #484b48
-color11      #616561
-color4       #69514c
-color12      #8C6D66
-color5       #53674d
-color13      #6F8A67
-color6       #66695a
-color14      #888D78
-color7       #90989b
-color15      #c3c5c6
+color0       #070705
+color8       #656553
+color1       #36362a
+color9       #484939
+color2       #4f3a2a
+color10      #6A4E38
+color3       #2f3030
+color11      #3F4041
+color4       #3f3f34
+color12      #555546
+color5       #4d493f
+color13      #676255
+color6       #4e4c40
+color14      #696656
+color7       #949488
+color15      #c1c1c0
