--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -243,7 +243,7 @@ include current-theme.conf
 
 #: }}}
 
-#: Text cursor customization {{{
+#i: Text cursor customization {{{
 
 # cursor #cccccc
 
@@ -743,7 +743,7 @@ include current-theme.conf
 
 #: }}}
 
-#: Performance tuning {{{
+i#: Performance tuning {{{
 
 # repaint_delay 10
 
@@ -1405,7 +1405,7 @@ include current-theme.conf
 #: }}}
 
 #: }}}
-# background #181815
+
 #: Advanced {{{
 
 # shell .
@@ -2649,3 +2649,5 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 # END_KITTY_FONTS
+window_padding_width 5
+
