--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,30 +1,30 @@
-foreground         #c1c1c0
-background         #070705
+foreground         #c3c5c5
+background         #121719
 background_opacity 1.0
-cursor             #c1c1c0
+cursor             #c3c5c5
 
-active_tab_foreground     #070705
-active_tab_background     #c1c1c0
-inactive_tab_foreground   #c1c1c0
-inactive_tab_background   #070705
+active_tab_foreground     #121719
+active_tab_background     #c3c5c5
+inactive_tab_foreground   #c3c5c5
+inactive_tab_background   #121719
 
-active_border_color   #c1c1c0
-inactive_border_color #070705
-bell_border_color     #36362a
+active_border_color   #c3c5c5
+inactive_border_color #121719
+bell_border_color     #513f31
 
-color0       #070705
-color8       #656553
-color1       #36362a
-color9       #484939
-color2       #4f3a2a
-color10      #6A4E38
-color3       #2f3030
-color11      #3F4041
-color4       #3f3f34
-color12      #555546
-color5       #4d493f
-color13      #676255
-color6       #4e4c40
-color14      #696656
-color7       #949488
-color15      #c1c1c0
+color0       #121719
+color8       #5c6c70
+color1       #513f31
+color9       #6D5542
+color2       #4b4330
+color10      #655A41
+color3       #745034
+color11      #9B6B46
+color4       #825031
+color12      #AE6B42
+color5       #846636
+color13      #B08949
+color6       #a07540
+color14      #D69D56
+color7       #90979a
+color15      #c3c5c5
