--- a/.config/cava/config
+++ b/.config/cava/config
@@ -1,6 +1,6 @@
 [color]
 gradient = 1
 gradient_count = 2
-gradient_color_1 = '#4f3a2a'
-gradient_color_2 = '#2f3030'
+gradient_color_1 = '#4b4330'
+gradient_color_2 = '#745034'
 
