--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,11 +6,10 @@ $menu = wofi --show drun -n
 exec-once = hypridle
 exec-once = waybar
 exec-once = swww-daemon
-exec-once = sudo powertop --auto-tune
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = swaync
 exec-once = swaync-client -df
 exec-once = pactl set-sink-mute @DEFAULT_SINK@ 0
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 env = XCURSOR_THEME,Bibata-Modern-Classic
 env = XCURSOR_SIZE,12
 general { 
