Update nvim and others

--- a/.config/cava/config
+++ b/.config/cava/config
@@ -1,6 +1,6 @@
 [color]
 gradient = 1
 gradient_count = 2
-gradient_color_1 = '#2e645d'
-gradient_color_2 = '#4b6458'
+gradient_color_1 = '#77777b'
+gradient_color_2 = '#75797c'
 
