--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,30 +1,30 @@
-foreground         #c4c3c2
-background         #13120d
+foreground         #c3c5c6
+background         #12181b
 background_opacity 1.0
-cursor             #c4c3c2
+cursor             #c3c5c6
 
-active_tab_foreground     #13120d
-active_tab_background     #c4c3c2
-inactive_tab_foreground   #c4c3c2
-inactive_tab_background   #13120d
+active_tab_foreground     #12181b
+active_tab_background     #c3c5c6
+inactive_tab_foreground   #c3c5c6
+inactive_tab_background   #12181b
 
-active_border_color   #c4c3c2
-inactive_border_color #13120d
-bell_border_color     #3b4e42
+active_border_color   #c3c5c6
+inactive_border_color #12181b
+bell_border_color     #737679
 
-color0       #13120d
-color8       #6c6759
-color1       #3b4e42
-color9       #4F6858
-color2       #2e645d
-color10      #3E867D
-color3       #4b6458
-color11      #658676
-color4       #666f54
-color12      #899470
-color5       #2d6464
-color13      #3D8686
-color6       #536f6a
-color14      #6F948E
-color7       #98988d
-color15      #c4c3c2
+color0       #12181b
+color8       #5c6a71
+color1       #737679
+color9       #9A9EA2
+color2       #77777b
+color10      #9F9FA4
+color3       #75797c
+color11      #9DA2A6
+color4       #7b7e81
+color12      #A5A8AC
+color5       #8a8d91
+color13      #B9BCC2
+color6       #8d9194
+color14      #BDC2C6
+color7       #90989b
+color15      #c3c5c6
