Updated script and added pyprland

--- a/.config/cava/config
+++ b/.config/cava/config
@@ -1,6 +1,6 @@
 [color]
 gradient = 1
 gradient_count = 2
-gradient_color_1 = '#77777b'
-gradient_color_2 = '#75797c'
+gradient_color_1 = '#724e0b'
+gradient_color_2 = '#925a0f'
 
