--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,30 +1,30 @@
-foreground         #c3c5c6
-background         #12181b
+foreground         #c2c2c1
+background         #0C0C08
 background_opacity 1.0
-cursor             #c3c5c6
+cursor             #c2c2c1
 
-active_tab_foreground     #12181b
-active_tab_background     #c3c5c6
-inactive_tab_foreground   #c3c5c6
-inactive_tab_background   #12181b
+active_tab_foreground     #0C0C08
+active_tab_background     #c2c2c1
+inactive_tab_foreground   #c2c2c1
+inactive_tab_background   #0C0C08
 
-active_border_color   #c3c5c6
-inactive_border_color #12181b
-bell_border_color     #737679
+active_border_color   #c2c2c1
+inactive_border_color #0C0C08
+bell_border_color     #484c51
 
-color0       #12181b
-color8       #5c6a71
-color1       #737679
-color9       #9A9EA2
-color2       #77777b
-color10      #9F9FA4
-color3       #75797c
-color11      #9DA2A6
-color4       #7b7e81
-color12      #A5A8AC
-color5       #8a8d91
-color13      #B9BCC2
-color6       #8d9194
-color14      #BDC2C6
-color7       #90989b
-color15      #c3c5c6
+color0       #0C0C08
+color8       #696955
+color1       #484c51
+color9       #60666C
+color2       #724e0b
+color10      #98690F
+color3       #925a0f
+color11      #C37814
+color4       #a0720a
+color12      #D6980E
+color5       #545b63
+color13      #717A85
+color6       #5b646b
+color14      #7A868F
+color7       #95958a
+color15      #c2c2c1
