--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 source = /home/$USER/.cache/wal/colors-hyprland
-monitor = DP-1, 2560x1440@165, 0x0, 1
+monitor = auto, 2560x1440@165, 0x0, 1
 $terminal = kitty
 $fileManager = thunar
 $menu = wofi --show drun -n
@@ -7,6 +7,7 @@ exec-once = hypridle
 exec-once = waybar
 exec-once = swww-daemon
 exec-once = swaync
+exec-once = pypr
 exec-once = swaync-client -df
 exec-once = pactl set-sink-mute @DEFAULT_SINK@ 0
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
@@ -14,21 +15,21 @@ env = XCURSOR_THEME,Bibata-Modern-Classic
 env = XCURSOR_SIZE,12
 general { 
         gaps_in = 2
-        gaps_out = 15
-        border_size = 1
-        col.active_border = $color9
-        col.inactive_border = $color5
-        resize_on_border = true
-        allow_tearing = false
-        layout = dwindle
+            gaps_out = 15
+            border_size = 0
+            col.active_border = $color9
+            col.inactive_border = $color5
+            resize_on_border = true
+            allow_tearing = false
+            layout = dwindle
 }
 decoration {
-        rounding = 10
-        active_opacity = 0.8
+    rounding = 10
+        active_opacity = 0.78
         inactive_opacity = 0.7
         fullscreen_opacity = 1
         blur {
-                enabled = true
+            enabled = true
                 size = 3
                 passes = 5
                 new_optimizations = true
@@ -37,32 +38,37 @@ decoration {
                 popups = true
         }
     shadow {
-            enabled = true
-            range = 5
-            render_power = 2
-            color = $color0
+        enabled = true
+            range = 15
+            render_power = 5
+            color = rgba(0,0,0,.5)
     }
 }
 animations {
-        enabled = true
-        bezier = linear, 0,0,1,1
-        bezier = swirl, 0.04, 1, 0.2, 1.2
-        animation = windows, 1, 4, swirl, popin 0%
-        animation = windowsOut, 1, 3, linear, popin 0%
-        animation = fade, 1, 2, linear
-        animation = workspaces, 1, 2, linear
-        animation = specialWorkspace, 1, 5, swirl, slidefadevert -50%
+    enabled = true
+
+    # Unique bezier curves for a balanced, smooth feel
+    bezier = fluid, 0.15, 0.85, 0.25, 1.1  # Smooth acceleration with a slight overshoot
+    bezier = snappy, 0.3, 1, 0.4, 1  # Snappy, yet natural for fast transitions
+
+    # Custom animations for a clean and distinct Hyprland experience
+    animation = windows, 1, 3.5, fluid, popin 5%
+    animation = windowsOut, 1, 2.5, snappy
+    animation = fade, 1, 2, fluid
+    animation = workspaces, 1, 1.7, snappy, slide
+    animation = specialWorkspace, 1, 4, fluid, slidefadevert -35%  # Slight vertical slide fade for uniqueness
 }
+
 dwindle {
-        preserve_split = true
+    preserve_split = true
 }
 misc { 
-        force_default_wallpaper = 1 
+    force_default_wallpaper = 1 
         disable_hyprland_logo = true 
 }
 
 input {
-        kb_layout = us
+    kb_layout = us
         follow_mouse = 1
         sensitivity = 0
         touchpad {
@@ -70,21 +76,23 @@ input {
         }
 }
 gestures {
-        workspace_swipe = true
+    workspace_swipe = true
         workspace_swipe_distance = 300
         workspace_swipe_cancel_ratio = .05
         workspace_swipe_min_speed_to_force = 0
 }
 device {
-        name = epic-mouse-v1
+    name = epic-mouse-v1
         sensitivity = 0
 }
+
+
 $mainMod = SUPER
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, B, killactive
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, A, exec, $menu
 bind = $mainMod, P, pseudo
 bind = $mainMod, J, togglesplit
 bind = $mainMod, F, fullscreen
@@ -113,8 +121,8 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod, F8, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind = $mainMod, F9, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-bind = $mainMod, F10, exec,pactl set-sink-volume @DEFAULT_SINK@ +5%
+binde = $mainMod, F9, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+binde = $mainMod, F10, exec,pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = ALT, left, movewindow, l
 bind = ALT, right, movewindow, r
 bind = ALT, up, movewindow, u
@@ -133,6 +141,10 @@ bind = ALT, w, exec, ~/.config/hypr/wallpaper.sh
 bind = ALT, a, exec, ~/.config/waybar/refresh.sh 
 bind = ALT, r, exec, ~/.config/swaync/refresh.sh
 bind = $mainMod, M, exit
+
+bind = $mainMod, SPACE, exec, pypr toggle term
+bind = $mainMod, G, exec, pypr toggle music
+bind = $mainMod, T, exec, pypr toggle taskbar
 
 layerrule = blur, waybar
 layerrule = ignorezero, waybar
