Added some Keybinds

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -113,9 +113,16 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
-bind = $mainMod, F8, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-binde = $mainMod, F9, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-binde = $mainMod, F10, exec,pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+bindl = , XF86AudioNext, exec, playerctl next
+bindl = , XF86AudioPause, exec, playerctl play-pause
+bindl = , XF86AudioPlay, exec, playerctl play-pause
+bindl = , XF86AudioPrev, exec, playerctl previous
 bind = ALT, left, movewindow, l
 bind = ALT, right, movewindow, r
 bind = ALT, up, movewindow, u
@@ -129,7 +136,6 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 bind = ALT, TAB, exec, wlogout -b 2
-#bind = CTRL, ESCAPE, exec, gksu
 bind = ALT, w, exec, ~/.config/hypr/wallpaper.sh
 bind = ALT, a, exec, ~/.config/waybar/refresh.sh 
 bind = ALT, r, exec, ~/.config/swaync/refresh.sh
@@ -137,6 +143,7 @@ bind = $mainMod, M, exit
 bind = $mainMod, SPACE, exec, pypr toggle term
 bind = $mainMod, G, exec, pypr toggle music
 bind = $mainMod, T, exec, pypr toggle taskbar
+#bind = CTRL, ESCAPE, exec, gksu #Dont worry about this
 layerrule = blur, waybar
 layerrule = ignorezero, waybar
 layerrule = ignorealpha 0.5, waybar
