--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -93,7 +93,7 @@ format = '[$symbol($version)]($style)'
 
 [git_branch]
 symbol = "  "
-format = '[$symbol($version)]($style)'
+format = '[$symbol($branch) ($version)]($style)'
 
 [git_commit]
 tag_symbol = '  '
