I Changed some stuff! Added myfetch and a lot of other small tweaks. Optional New waybar.css

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,8 +1,11 @@
 source = /home/$USER/.cache/wal/colors-hyprland
+
 monitor = auto, 2560x1440@165, 0x0, 1
+
 $terminal = kitty
 $fileManager = thunar
 $menu = wofi --show drun -n
+
 exec-once = hypridle
 exec-once = waybar
 exec-once = swww-daemon
@@ -10,12 +13,34 @@ exec-once = swaync
 exec-once = pypr
 exec-once = swaync-client -df
 exec-once = pactl set-sink-mute @DEFAULT_SINK@ 0
+exec-once = hyprctl plugin load $HOME/.local/share/hyprpm/dynamic-cursors/dynamic-cursors.so
+
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 env = XCURSOR_THEME,Bibata-Modern-Classic
 env = XCURSOR_SIZE,12
+
+plugin:dynamic-cursors {
+    mode = stretch
+    threshold = 2
+    shaperule = grab, stretch, stretch:limit: 2000
+    rotate {
+        length = 12
+        offset = 30
+    }
+    stretch {
+        limit = 1000
+        # linear             - a linear function is used
+        # quadratic          - a quadratic function is used
+        # negative_quadratic - negative version of the quadratic one, feels more aggressive
+        function = negative_quadratic
+    }
+    shake {
+        enabled = true
+    }
+}
 general { 
         gaps_in = 2
-            gaps_out = 15
+            gaps_out = 10
             border_size = 0
             col.active_border = $color9
             col.inactive_border = $color5
@@ -54,6 +79,7 @@ animations {
     animation = fade, 1, 4, fluid
     animation = workspaces, 1, 1.7, snappy, slide
     animation = specialWorkspace, 1, 4, fluid, slidefadevert -35%
+    animation = layers, 1, 2, snappy, popin 50%
 }
 dwindle {
     preserve_split = true
