--- a/.config/cava/config
+++ b/.config/cava/config
@@ -1,6 +1,6 @@
 [color]
 gradient = 1
 gradient_count = 2
-gradient_color_1 = '#23625a'
-gradient_color_2 = '#48675b'
+gradient_color_1 = '#6f5874'
+gradient_color_2 = '#047581'
 
