--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 # BEGIN_KITTY_THEME
-# Gruvbox Dark Hard
+# Everforest Dark Hard
 include current-theme.conf
 # END_KITTY_THEME
 
@@ -2650,4 +2650,6 @@ italic_font      auto
 bold_italic_font auto
 # END_KITTY_FONTS
 window_padding_width 5
-
+tab_bar_style slant
+enable_audio_bell no
+notify_on_cmd_finish unfocused
