--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,7 +4,8 @@ monitor = auto, 2560x1440@165, 0x0, 1
 
 $terminal = kitty
 $fileManager = thunar
-$menu = wofi --show drun -n
+# $menu = wofi --show drun -n
+$menu = rofi -show drun
 
 exec-once = hypridle
 exec-once = waybar
@@ -14,7 +15,6 @@ exec-once = pypr
 exec-once = swaync-client -df
 exec-once = pactl set-sink-mute @DEFAULT_SINK@ 0
 exec-once = hyprctl plugin load $HOME/.local/share/hyprpm/dynamic-cursors/dynamic-cursors.so
-
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 env = XCURSOR_THEME,Bibata-Modern-Classic
 env = XCURSOR_SIZE,12
@@ -35,10 +35,11 @@ plugin:dynamic-cursors {
         function = negative_quadratic
     }
     shake {
-        enabled = true
+        enabled = false
     }
 }
 general { 
+    
         gaps_in = 2
             gaps_out = 10
             border_size = 0
@@ -50,7 +51,7 @@ general {
 }
 decoration {
     rounding = 10
-        active_opacity = 0.78
+        active_opacity = 0.85
         inactive_opacity = 0.7
         fullscreen_opacity = 1
         blur {
@@ -79,14 +80,15 @@ animations {
     animation = fade, 1, 4, fluid
     animation = workspaces, 1, 1.7, snappy, slide
     animation = specialWorkspace, 1, 4, fluid, slidefadevert -35%
-    animation = layers, 1, 2, snappy, popin 50%
+    animation = layers, 1, 2, snappy, popin 70%
 }
 dwindle {
     preserve_split = true
 }
 misc { 
     force_default_wallpaper = 1 
-        disable_hyprland_logo = true 
+    disable_hyprland_logo = true 
+    focus_on_activate = true
 }
 input {
     kb_layout = us
@@ -173,9 +175,13 @@ bind = $mainMod, T, exec, pypr toggle taskbar
 layerrule = blur, waybar
 layerrule = ignorezero, waybar
 layerrule = ignorealpha 0.5, waybar
+layerrule = blur, rofi
+layerrule = ignorezero, rofi
+layerrule = ignorealpha 0.5, rofi
 layerrule = blur, swaync-control-center
 layerrule = blur, swaync-notification-window
 layerrule = ignorezero, swaync-control-center
 layerrule = ignorezero, swaync-notification-window
 layerrule = ignorealpha 0.5, swaync-control-center
 layerrule = ignorealpha 0.5, swaync-notification-window
+layerrule = noanim, selection
