--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,30 +1,30 @@
-foreground         #c2c7cc
-background         #0C2234
+foreground         #bfc6c8
+background         #021E25
 background_opacity 1.0
-cursor             #c2c7cc
+cursor             #bfc6c8
 
-active_tab_foreground     #0C2234
-active_tab_background     #c2c7cc
-inactive_tab_foreground   #c2c7cc
-inactive_tab_background   #0C2234
+active_tab_foreground     #021E25
+active_tab_background     #bfc6c8
+inactive_tab_foreground   #bfc6c8
+inactive_tab_background   #021E25
 
-active_border_color   #c2c7cc
-inactive_border_color #0C2234
-bell_border_color     #464e7b
+active_border_color   #bfc6c8
+inactive_border_color #021E25
+bell_border_color     #85523a
 
-color0       #0C2234
-color8       #636e79
-color1       #464e7b
-color9       #5E68A4
-color2       #6f5874
-color10      #94769B
-color3       #047581
-color11      #069CAC
-color4       #138988
-color12      #1AB7B6
-color5       #7e6982
-color13      #A98DAE
-color6       #967a8d
-color14      #C8A3BC
-color7       #949a9f
-color15      #c2c7cc
+color0       #021E25
+color8       #5b6b6f
+color1       #85523a
+color9       #B26E4E
+color2       #23625a
+color10      #2F8379
+color3       #48675b
+color11      #608A7A
+color4       #7f6f56
+color12      #AA9473
+color5       #bb6b33
+color13      #FA8F44
+color6       #ab7047
+color14      #E5965F
+color7       #8f9799
+color15      #bfc6c8
