--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,7 +6,6 @@ $terminal = kitty
 $fileManager = thunar
 # $menu = wofi --show drun -n
 $menu = wofi -n
-
 exec-once = hypridle
 exec-once = waybar
 exec-once = swww-daemon
@@ -72,7 +71,6 @@ decoration {
 }
 animations {
     enabled = true
-
     bezier = fluid, 0.15, 0.85, 0.25, 1
     bezier = snappy, 0.3, 1, 0.4, 1
     animation = windows, 1, 3, fluid, popin 5%
@@ -86,8 +84,8 @@ dwindle {
     preserve_split = true
 }
 misc { 
-    force_default_wallpaper = 1 
-    disable_hyprland_logo = true 
+    force_default_wallpaper = -1
+    disable_hyprland_logo = true
     focus_on_activate = true
 }
 input {
@@ -166,8 +164,8 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 bind = ALT, TAB, exec, wlogout -b 2
 bind = ALT, w, exec, ~/.config/hypr/wallpaper.sh
-bind = ALT, a, exec, ~/.config/waybar/refresh.sh 
-bind = ALT, B, exec, ~/.config/waybar/select.sh
+bind = ALT, a, exec, ~/.config/waybar/scripts/refresh.sh 
+bind = ALT, B, exec, ~/.config/waybar/scripts/select.sh
 bind = ALT, r, exec, ~/.config/swaync/refresh.sh
 bind = $mainMod, M, exit
 bind = $mainMod, SPACE, exec, pypr toggle term
@@ -177,9 +175,6 @@ bind = $mainMod, T, exec, pypr toggle taskbar
 layerrule = blur, waybar
 layerrule = ignorezero, waybar
 layerrule = ignorealpha 0.5, waybar
-layerrule = blur, rofi
-layerrule = ignorezero, rofi
-layerrule = ignorealpha 0.5, rofi
 layerrule = blur, swaync-control-center
 layerrule = blur, swaync-notification-window
 layerrule = ignorezero, swaync-control-center
@@ -187,4 +182,3 @@ layerrule = ignorezero, swaync-notification-window
 layerrule = ignorealpha 0.5, swaync-control-center
 layerrule = ignorealpha 0.5, swaync-notification-window
 layerrule = noanim, selection
-
