--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,30 +1,30 @@
-foreground         #bfc6c8
-background         #021E25
+foreground         #c5c6c2
+background         #191c0e
 background_opacity 1.0
-cursor             #bfc6c8
+cursor             #c5c6c2
 
-active_tab_foreground     #021E25
-active_tab_background     #bfc6c8
-inactive_tab_foreground   #bfc6c8
-inactive_tab_background   #021E25
+active_tab_foreground     #191c0e
+active_tab_background     #c5c6c2
+inactive_tab_foreground   #c5c6c2
+inactive_tab_background   #191c0e
 
-active_border_color   #bfc6c8
-inactive_border_color #021E25
-bell_border_color     #85523a
+active_border_color   #c5c6c2
+inactive_border_color #191c0e
+bell_border_color     #83816e
 
-color0       #021E25
-color8       #5b6b6f
-color1       #85523a
-color9       #B26E4E
-color2       #23625a
-color10      #2F8379
-color3       #48675b
-color11      #608A7A
-color4       #7f6f56
-color12      #AA9473
-color5       #bb6b33
-color13      #FA8F44
-color6       #ab7047
-color14      #E5965F
-color7       #8f9799
-color15      #bfc6c8
+color0       #191c0e
+color8       #6c705c
+color1       #83816e
+color9       #AFAC93
+color2       #8a897e
+color10      #B9B7A8
+color3       #928d81
+color11      #C3BCAD
+color4       #8c927c
+color12      #BBC3A6
+color5       #a4a26f
+color13      #DBD995
+color6       #969489
+color14      #C9C6B7
+color7       #989a8f
+color15      #c5c6c2
