Fixed Swaync and other small bugs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,34 +9,15 @@ $menu = wofi -n
 exec-once = hypridle
 exec-once = waybar
 exec-once = swww-daemon
+exec-once = sleep .5 && swww restore
 exec-once = swaync
 exec-once = pypr
 exec-once = swaync-client -df
 exec-once = pactl set-sink-mute @DEFAULT_SINK@ 0
-exec-once = hyprctl plugin load $HOME/.local/share/hyprpm/dynamic-cursors/dynamic-cursors.so
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 env = XCURSOR_THEME,Bibata-Modern-Classic
 env = XCURSOR_SIZE,12
 
-plugin:dynamic-cursors {
-    mode = stretch
-    threshold = 2
-    shaperule = grab, stretch, stretch:limit: 2000
-    rotate {
-        length = 12
-        offset = 30
-    }
-    stretch {
-        limit = 1000
-        # linear             - a linear function is used
-        # quadratic          - a quadratic function is used
-        # negative_quadratic - negative version of the quadratic one, feels more aggressive
-        function = negative_quadratic
-    }
-    shake {
-        enabled = false
-    }
-}
 general { 
     
         gaps_in = 2
