--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,30 +1,30 @@
-foreground         #c5c6c2
-background         #191c0e
+foreground         #c4c3c2
+background         #13120d
 background_opacity 1.0
-cursor             #c5c6c2
+cursor             #c4c3c2
 
-active_tab_foreground     #191c0e
-active_tab_background     #c5c6c2
-inactive_tab_foreground   #c5c6c2
-inactive_tab_background   #191c0e
+active_tab_foreground     #13120d
+active_tab_background     #c4c3c2
+inactive_tab_foreground   #c4c3c2
+inactive_tab_background   #13120d
 
-active_border_color   #c5c6c2
-inactive_border_color #191c0e
-bell_border_color     #83816e
+active_border_color   #c4c3c2
+inactive_border_color #13120d
+bell_border_color     #3b4e42
 
-color0       #191c0e
-color8       #6c705c
-color1       #83816e
-color9       #AFAC93
-color2       #8a897e
-color10      #B9B7A8
-color3       #928d81
-color11      #C3BCAD
-color4       #8c927c
-color12      #BBC3A6
-color5       #a4a26f
-color13      #DBD995
-color6       #969489
-color14      #C9C6B7
-color7       #989a8f
-color15      #c5c6c2
+color0       #13120d
+color8       #6c6759
+color1       #3b4e42
+color9       #4F6858
+color2       #2e645d
+color10      #3E867D
+color3       #4b6458
+color11      #658676
+color4       #666f54
+color12      #899470
+color5       #2d6464
+color13      #3D8686
+color6       #536f6a
+color14      #6F948E
+color7       #98988d
+color15      #c4c3c2
