Edit Keybinds and waybar, update wallpapers

--- a/.config/cava/config
+++ b/.config/cava/config
@@ -1,5 +1,5 @@
 [color]
 gradient = 1
 gradient_count = 2
-gradient_color_1 = '#2e645d'
-gradient_color_2 = '#4b6458'
+gradient_color_1 = '#096d66'
+gradient_color_2 = '#1f736e'
