--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,30 +1,30 @@
-foreground         #c4c3c2
-background         #13120d
+foreground         #c6ccd0
+background         #1e3446
 background_opacity 1.0
-cursor             #c4c3c2
+cursor             #c6ccd0
 
-active_tab_foreground     #13120d
-active_tab_background     #c4c3c2
-inactive_tab_foreground   #c4c3c2
-inactive_tab_background   #13120d
+active_tab_foreground     #1e3446
+active_tab_background     #c6ccd0
+inactive_tab_foreground   #c6ccd0
+inactive_tab_background   #1e3446
 
-active_border_color   #c4c3c2
-inactive_border_color #13120d
-bell_border_color     #3b4e42
+active_border_color   #c6ccd0
+inactive_border_color #1e3446
+bell_border_color     #315d6b
 
-color0       #13120d
-color8       #6c6759
-color1       #3b4e42
-color9       #4F6858
-color2       #2e645d
-color10      #3E867D
-color3       #4b6458
-color11      #658676
-color4       #666f54
-color12      #899470
-color5       #2d6464
-color13      #3D8686
-color6       #536f6a
-color14      #6F948E
-color7       #98988d
-color15      #c4c3c2
+color0       #1e3446
+color8       #6c7a85
+color1       #315d6b
+color9       #427D8F
+color2       #096d66
+color10      #0C9288
+color3       #1f736e
+color11      #2A9A93
+color4       #06806b
+color12      #09AB8F
+color5       #367577
+color13      #489D9F
+color6       #78988a
+color14      #A0CBB9
+color7       #9da2a6
+color15      #c6ccd0
