--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,9 +1,8 @@
 source = /home/$USER/.cache/wal/colors-hyprland
 
-monitor = auto, 2560x1440@165, 0x0, 1
-
+monitor =eDP-1,preferred@60,auto,auto
 $terminal = kitty
-$fileManager = thunar
+$fileManager = nautilus
 # $menu = wofi --show drun -n
 $menu = wofi -n
 exec-once = hypridle
@@ -16,12 +15,12 @@ exec-once = swaync-client -df
 exec-once = pactl set-sink-mute @DEFAULT_SINK@ 0
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 env = XCURSOR_THEME,Bibata-Modern-Classic
-env = XCURSOR_SIZE,12
+env = XCURSOR_SIZE,24
 
 general { 
     
         gaps_in = 2
-            gaps_out = 10
+            gaps_out = 5
             border_size = 0
             col.active_border = $color9
             col.inactive_border = $color5
@@ -31,7 +30,7 @@ general {
 }
 decoration {
     rounding = 10
-        active_opacity = 0.78
+        active_opacity = 0.88
         inactive_opacity = 0.7
         fullscreen_opacity = 1
         blur {
@@ -44,7 +43,7 @@ decoration {
                 popups = true
         }
     shadow {
-        enabled = true
+        enabled = false
             range = 15
             render_power = 5
             color = rgba(0,0,0,.5)
@@ -52,14 +51,28 @@ decoration {
 }
 animations {
     enabled = true
+
+    # Define bezier curves for animations
     bezier = fluid, 0.15, 0.85, 0.25, 1
     bezier = snappy, 0.3, 1, 0.4, 1
-    animation = windows, 1, 3, fluid, popin 5%
-    animation = windowsOut, 1, 2.5, snappy
-    animation = fade, 1, 4, snappy
-    animation = workspaces, 1, 1.7, snappy, slide
+
+    # Animation for window opening
+    animation = windows, 1, 6, fluid, popin 5%
+
+    # Animation for window closing
+    animation = windowsOut, 1, 5, snappy
+
+    # Animation for fade effects
+    animation = fade, 1, 7, snappy
+
+    # Animation for workspaces
+    animation = workspaces, 1, 10, snappy, slide
+
+    # Special workspace animation with slide and fade
     animation = specialWorkspace, 1, 4, fluid, slidefadevert -35%
-    animation = layers, 1, 2, snappy, popin 70%
+
+    # Animation for layers
+    animation = layers, 1, 5, snappy, popin 70%
 }
 dwindle {
     preserve_split = true
@@ -70,7 +83,8 @@ misc {
     focus_on_activate = true
 }
 input {
-    kb_layout = us
+    kb_layout = us,ir
+    kb_options = grp:win_space_toggle
         follow_mouse = 1
         sensitivity = 0
         touchpad {
@@ -88,15 +102,18 @@ device {
     sensitivity = 0
 }
 $mainMod = SUPER
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, B, killactive
+bind = $mainMod, RETURN, exec, $terminal
+bind = $mainMod, Q, killactive
 bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, B, exec, firefox
+bind = $mainMod, C, exec, code
 # bind = $mainMod, V, exec, hyprctl --batch "dispatch togglefloating; dispatch resizeactive exact 800 800; dispatch centerwindow 1;"
 bind = $mainMod, V, togglefloating 
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, W, exec, $menu
 bind = $mainMod, P, pseudo
 bind = $mainMod, J, togglesplit
-bind = $mainMod, F, fullscreen
+bind = $mainMod, F, fullscreen, 1
+bind = $mainMod SHIFT, F, fullscreen
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
@@ -148,8 +165,11 @@ bind = ALT, w, exec, ~/.config/hypr/wallpaper.sh
 bind = ALT, a, exec, ~/.config/waybar/scripts/refresh.sh 
 bind = ALT, B, exec, ~/.config/waybar/scripts/select.sh
 bind = ALT, r, exec, ~/.config/swaync/refresh.sh
-bind = $mainMod, M, exit
-bind = $mainMod, SPACE, exec, pypr toggle term
+# bind = $mainMod SHIFT, LEFT, moveactivewindow left 100%
+# bind = $mainMod SHIFT, RIGHT, moveactivewindow right 100%
+
+# bind = $mainMod, M, exit
+bind = $mainMod, X, exec, pypr toggle term
 bind = $mainMod, G, exec, pypr toggle music
 bind = $mainMod, T, exec, pypr toggle taskbar
 #bind = CTRL, ESCAPE, exec, gksu #Dont worry about this
@@ -163,3 +183,6 @@ layerrule = ignorezero, swaync-notification-window
 layerrule = ignorealpha 0.5, swaync-control-center
 layerrule = ignorealpha 0.5, swaync-notification-window
 layerrule = noanim, selection
+layerrule = blur, wofi
+layerrule = ignorezero, wofi
+layerrule = ignorealpha 0.5, wofi
